# hackathon-ll-Phase-ll

./: .gitignore
.specify/memory/: constitution.md
backend/: AUTH_INTEGRATION.md  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: tasks.py
backend/app/core/: security.py
backend/app/db/: session.py
backend/app/models/: pydantic_models.py  task.py
backend/src/: main.py  test_actual_config.py
backend/tests/api/v1/: test_tasks.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/components/auth/: login-form.tsx
frontend/components/providers/: protected-route.tsx
frontend/components/tasks/: task-card.tsx  task-list.tsx
frontend/components/ui/: button.tsx  modal.tsx
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/styles/: globals.css
history/prompts/001-todo-app-backend/: 001-specify-todo-app-backend.spec.prompt.md  002-plan-todo-app-backend.plan.prompt.md  003-generate-tasks-for-todo-backend.tasks.prompt.md  004-implement-todo-app-backend.green.prompt.md  (+3 more)
specs/001-todo-app-backend/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-app-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-auth-ui-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-system-integration-fixes/: data-model.md  environment-setup.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+55 files in other folders)
