[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel",
    "uvicorn",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


